# unittest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  unittest.cmake
.github/workflows/: main.yml
cmake/: cmake_utils.cmake
dependencies/libpng/lib/vs/: libpng16_static.lib
dependencies/libz/lib/vs/: zlibstatic.lib
include/json/: json.h
include/unittest/: test.h
libraries/json/: CMakeLists.txt  json.cmake
libraries/json/include/json/: json.h
libraries/json/src/: json.cpp  json_lexer.h  json_parser.h
libraries/unittest/src/: test_info.cpp  unit_tests.h
resources/: config.json.in
src/: json.cpp  json_lexer.cpp  json_lexer.h  json_parser.cpp  json_parser.h  json_token.h  json_value.cpp  main.cpp  main.h  render.cpp  render.h  system.h.in  test_info.h  test_info_compare.h  unit_test_base.cpp  unit_test_error.cpp  unit_test_exception.cpp  unit_test_exception.h  unit_tests.cpp  unit_tests.h
src/math/: quadratic.cpp  quadratic.h  vector.cpp  vector.h  vector3d.cpp  vector3d.h
src/primitive/: color.cpp  color.h  color_accumulator.cpp  color_accumulator.h  intersection.cpp  intersection.h  ray.cpp  ray.h
src/render/: batch_render.cpp  batch_render.h  render_job.cpp  render_job.h
src/resource/: bitmap.cpp  bitmap.h  image.cpp  image.h  image_utilities.cpp  image_utilities.h
src/world/: camera.cpp  camera.h  scene.cpp  scene.h
src/world/material/: flat_color.cpp  flat_color.h  material.cpp  material.h  surface.h  texture.cpp  texture.h
src/world/object/: cube_map.cpp  cube_map.h  light.cpp  light.h  light_type.cpp  light_type.h  plane.cpp  plane.h  point_light.cpp  point_light.h  sphere.cpp  sphere.h  sphere_light.cpp  sphere_light.h  traceable.cpp  traceable.h  triangle.cpp  triangle.h
test/: example.cpp  test_parse.cpp
